Fixed editor view bug. Update template element border link.

--- a/src/template/components/Link.scss
+++ b/src/template/components/Link.scss
@@ -5,8 +5,12 @@
   text-decoration: none;
 
   &:hover:not(.RootIsActive) {
+    .Black {
+      box-shadow: 0 0 0 2px rgba(0, 0, 0, .6);
+    }
+
     .Border {
-      border-color: rgba(255, 255, 255, .2);
+      border-color: rgba(255, 255, 255, .6);
     }
   }
 
@@ -14,11 +18,27 @@
     &Active {
       pointer-events: none;
 
+      .Black {
+        box-shadow: 0 0 0 2px rgba(0, 0, 0, 1);
+      }
+
       .Border {
-        border-color: rgba(255, 255, 255, .6);
+        border-color: rgba(255, 255, 255, 1);
       }
     }
   }
+}
+
+.Black {
+  border-radius: 8px;
+  display: block;
+  height: calc(100% + 12px);
+  left: -10px;
+  position: absolute;
+  transition: .2s all;
+  top: -6px;
+  width: calc(100% + 20px);
+  z-index: 1;
 }
 
 .Border {
@@ -31,6 +51,7 @@
   transition: .2s all;
   top: -8px;
   width: calc(100% + 24px);
+  z-index: 2;
 }
 
 .Content {
