--- a/src/template/components/Background.scss
+++ b/src/template/components/Background.scss
@@ -4,19 +4,15 @@
   position: relative;
 
   &:hover {
-    .Link {
+    .Hover {
       opacity: 1;
     }
   }
 
   &Is {
     &Focused {
-      .Container {
-        cursor: pointer;
-      }
-
-      .Focus {
-        opacity: 0.8;
+      .Hover {
+        opacity: 1;
       }
     }
   }
@@ -26,6 +22,10 @@
   position: relative;
   width: 100%;
   z-index: 5;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .Cover {
@@ -34,13 +34,26 @@
   left: 0;
   position: absolute;
   top: 0;
-  transition: all 0.4s;
+  transition: all .4s;
   width: 100%;
   z-index: 1;
 }
 
+.Hover {
+  background: url('https://i.stack.imgur.com/QoWYn.png');
+  background-size: 150px 100px;
+  height: 100%;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  transition: all .4s;
+  top: 0;
+  width: 100%;
+  z-index: 2;
+}
+
 .Link {
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, .8);
   border-radius: 0 8px 0 0;
   bottom: 0;
   color: #fff;
@@ -49,7 +62,7 @@
   padding: 8px 16px;
   position: absolute;
   text-decoration: none;
-  transition: all 0.2s;
+  transition: all .2s;
   z-index: 10;
 
   &Is {
