--- a/src/template/components/Background.scss
+++ b/src/template/components/Background.scss
@@ -5,14 +5,14 @@
 
   &:hover {
     .Hover {
-      opacity: 1;
+      opacity: 0.8;
     }
   }
 
   &Is {
     &Focused {
       .Hover {
-        opacity: 1;
+        opacity: 0.8;
       }
     }
   }
@@ -34,26 +34,26 @@
   left: 0;
   position: absolute;
   top: 0;
-  transition: all .4s;
+  transition: all 0.4s;
   width: 100%;
   z-index: 1;
 }
 
 .Hover {
   background: url('https://i.stack.imgur.com/QoWYn.png');
-  background-size: 150px 100px;
+  background-size: 100px 50px;
   height: 100%;
   left: 0;
   opacity: 0;
   position: absolute;
-  transition: all .4s;
+  transition: all 0.4s;
   top: 0;
   width: 100%;
   z-index: 2;
 }
 
 .Link {
-  background: rgba(0, 0, 0, .8);
+  background: rgba(0, 0, 0, 0.8);
   border-radius: 0 8px 0 0;
   bottom: 0;
   color: #fff;
@@ -62,7 +62,7 @@
   padding: 8px 16px;
   position: absolute;
   text-decoration: none;
-  transition: all .2s;
+  transition: all 0.2s;
   z-index: 10;
 
   &Is {
