--- a/src/template/templates/Template7/Template7.scss
+++ b/src/template/templates/Template7/Template7.scss
@@ -3,9 +3,14 @@
 @import './styles/tablet.scss';
 
 .Root {
-  overflow-x: hidden;
-  overflow-y: scroll;
-  width: 100%;
+  max-width: 100%;
+
+  &With {
+    &Scroll {
+      overflow-x: hidden;
+      overflow-y: scroll;
+    }
+  }
 }
 
 .About {
