--- a/src/template/containers/Sandbox.scss
+++ b/src/template/containers/Sandbox.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  min-width: 100vw;
+  min-width: 100%;
 
   & > * {
     flex: 1 1 auto;
