--- a/src/template/components/Smartphone.scss
+++ b/src/template/components/Smartphone.scss
@@ -58,5 +58,7 @@
   background: no-repeat center center;
   background-size: contain;
   height: 100%;
+  position: relative;
   width: 100%;
+  z-index: 2;
 }
