--- a/src/template/templates/Template1/Template1.scss
+++ b/src/template/templates/Template1/Template1.scss
@@ -76,6 +76,10 @@
         }
       }
 
+      .Screenshots {
+        padding: 10px 10px 18px !important;
+      }
+
       .Smartphone {
         height: 247px;
         position: relative;
@@ -118,6 +122,10 @@
         height: 353px;
         position: relative;
         width: 173px;
+      }
+
+      .Screenshots {
+        padding: 14px 14px 24px !important;
       }
     }
 
