--- a/src/template/components/Background.scss
+++ b/src/template/components/Background.scss
@@ -10,6 +10,14 @@
   }
 
   &Is {
+    &Editor {
+      .Container {
+        &:hover {
+          cursor: pointer;
+        }
+      }
+    }
+
     &Focused {
       .Hover {
         opacity: 0.6;
@@ -22,10 +30,6 @@
   position: relative;
   width: 100%;
   z-index: 5;
-
-  &:hover {
-    cursor: pointer;
-  }
 }
 
 .Cover {
