--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,5 +1,5 @@
 .Root {
-  transition: all 0.2s;
+  transition: all .2s;
 
   &:focus {
     outline: none;
@@ -10,15 +10,20 @@
   }
 
   &Is {
+    &Disabled {
+      opacity: .6;
+      pointer-events: none;
+    }
+
     &Loaded {
-      opacity: 0.8;
+      opacity: .8;
       pointer-events: none;
     }
   }
 
   &Variant {
     &Form {
-      background: rgba(#9e9ae2, 0.8);
+      background: rgba(#9e9ae2, .8);
       border: 0;
       border-radius: 4px;
       color: rgba(#fff, 8);
@@ -29,17 +34,17 @@
     }
 
     &GradientReverse {
-      background: rgba(#9e9ae2, 0.4);
+      background: rgba(#9e9ae2, .4);
       border: 0;
       border-radius: 32px;
-      box-shadow: 0 8px 12px rgba(#9e9ae2, 0.6);
+      box-shadow: 0 8px 12px rgba(#9e9ae2, .6);
       min-height: 40px;
       min-width: 78px;
       position: relative;
 
       &:after {
         background: transparent;
-        border: 6px solid rgba(#9e9ae2, 0.5);
+        border: 6px solid rgba(#9e9ae2, .5);
         border-radius: 40px;
         content: '';
         display: block;
@@ -47,7 +52,7 @@
         left: -6px;
         position: absolute;
         top: -6px;
-        transition: all 0.2s;
+        transition: all .2s;
         width: calc(100% + 12px);
         z-index: -1;
       }
@@ -57,7 +62,7 @@
         box-shadow: none;
 
         &:after {
-          background: rgba(#9e9ae2, 0.6);
+          background: rgba(#9e9ae2, .6);
           border-color: transparent;
         }
       }
@@ -73,24 +78,24 @@
       }
 
       .Content {
-        color: rgba(255, 255, 255, 0.8);
+        color: rgba(255, 255, 255, .8);
         font-size: 14px;
         font-weight: 600;
-        letter-spacing: 0.4px;
+        letter-spacing: .4px;
       }
     }
 
     &Gradient {
-      background: rgba(#9e9ae2, 0.8);
+      background: rgba(#9e9ae2, .8);
       border: 0;
       border-radius: 32px;
-      box-shadow: 0 8px 12px rgba(#9e9ae2, 0.6);
+      box-shadow: 0 8px 12px rgba(#9e9ae2, .6);
       min-height: 40px;
       min-width: 78px;
       position: relative;
 
       &:after {
-        border: 6px solid rgba(#9e9ae2, 0.2);
+        border: 6px solid rgba(#9e9ae2, .2);
         border-radius: 40px;
         content: '';
         display: block;
@@ -98,26 +103,26 @@
         left: -6px;
         position: absolute;
         top: -6px;
-        transition: all 0.2s;
+        transition: all .2s;
         width: calc(100% + 12px);
         z-index: -1;
       }
 
       &:active {
-        background: rgba(#9e9ae2, 0.6);
-        box-shadow: 0 8px 12px rgba(#9e9ae2, 0.4);
+        background: rgba(#9e9ae2, .6);
+        box-shadow: 0 8px 12px rgba(#9e9ae2, .4);
       }
 
       &:hover:not(:active) {
         background: rgba(#9e9ae2, 1);
-        box-shadow: 0 8px 12px rgba(#9e9ae2, 0.8);
+        box-shadow: 0 8px 12px rgba(#9e9ae2, .8);
       }
 
       .Content {
-        color: rgba(255, 255, 255, 0.8);
+        color: rgba(255, 255, 255, .8);
         font-size: 14px;
         font-weight: 600;
-        letter-spacing: 0.4px;
+        letter-spacing: .4px;
       }
     }
   }
@@ -128,7 +133,7 @@
 }
 
 .Loader {
-  animation: spin 0.8s linear infinite;
+  animation: spin .8s linear infinite;
   font-size: 20px;
 }
 
