--- a/src/containers/Plans/Plans.scss
+++ b/src/containers/Plans/Plans.scss
@@ -10,71 +10,34 @@
     &Enter {
       &Active {
         .Choose {
-          transition-delay: .2s;
+          transition-delay: 0.2s;
         }
 
         .Description {
-          transition-delay: .1s;
+          transition-delay: 0.1s;
+        }
+
+        .Period {
+          transition-delay: 0.3s;
         }
 
         .Choose,
         .Description,
+        .Period,
         .Title {
           opacity: 1 !important;
           transform: translateY(0) !important;
-          transition-duration: .4s;
+          transition-duration: 0.4s;
           transition-property: all;
         }
       }
 
       .Choose,
       .Description,
+      .Period,
       .Title {
         opacity: 0;
         transform: translateY(40px);
-      }
-    }
-  }
-
-  &With {
-    &Price {
-      .Header {
-        height: 0;
-        opacity: 0;
-        transform: translateY(-140px);
-        transition: all .4s;
-      }
-
-      .List {
-        height: 425px;
-        margin: 64px 0 0;
-        transition: all .4s;
-
-        @include breakpoint(laptop) {
-          height: 290px;
-        }
-      }
-
-      .Period {
-        height: 60px;
-        margin: 24px 0 0;
-        opacity: 1;
-        visibility: visible;
-        transition: all .4s;
-
-        @include breakpoint(desktop) {
-          margin: 60px 0 0;
-        }
-      }
-
-      .Price {
-        height: 256px;
-        transition: all .4s;
-
-
-        @include breakpoint(laptop) {
-          height: auto;
-        }
       }
     }
   }
@@ -118,27 +81,25 @@
 }
 
 .List {
-  height: 44px;
-  margin: 0;
+  height: 425px;
+  margin: 64px 0 0;
+  transition: all 0.4s;
   width: 1200px;
 
   @include breakpoint(laptop) {
-    width: 780px;
+    height: 290px;
   }
 }
 
 .Period {
-  height: 0;
-  margin: 0;
-  opacity: 0;
-  visibility: hidden;
-}
+  height: 60px;
+  margin: 24px 0 0;
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.4s;
 
-.Price {
-  height: 564px;
-
-  @include breakpoint(laptop) {
-    height: 440px;
+  @include breakpoint(desktop) {
+    margin: 60px 0 0;
   }
 }
 
@@ -147,7 +108,7 @@
   background-clip: text;
   font-size: 46px;
   font-weight: 900;
-  letter-spacing: -.2px;
+  letter-spacing: -0.2px;
   -webkit-text-fill-color: transparent;
 
   @include breakpoint(laptop) {
