--- a/src/template/templates/Template5/Template5.scss
+++ b/src/template/templates/Template5/Template5.scss
@@ -42,7 +42,7 @@
 .Copyright {
   &Text {
     font-size: 14px;
-    letter-spacing: 0.1px;
+    letter-spacing: .1px;
   }
 }
 
@@ -74,12 +74,6 @@
   align-items: center;
   display: flex;
   justify-content: space-between;
-}
-
-.Smartphone {
-  &Mockup {
-    filter: drop-shadow(0 32px 24px rgba(0, 0, 0, 0.6));
-  }
 }
 
 .Title {
