--- a/src/views/Main/Main.scss
+++ b/src/views/Main/Main.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex: 1 1 auto;
   flex-direction: column;
-  max-height: 100%;
+  height: 100%;
 }
 
 .Container {
@@ -10,14 +10,14 @@
   flex: 1 1 auto;
   flex-direction: column;
   margin: 100px 0 0;
-  max-height: calc(100% - 200px);
+  height: calc(100% - 200px);
   position: relative;
 
   & > * {
     display: flex;
     flex: 1 1 auto;
     flex-direction: column;
-    max-height: 100%;
+    height: 100%;
     position: relative;
   }
 
@@ -56,7 +56,7 @@
   display: flex;
   flex: 1 1 auto;
   flex-direction: column;
-  max-height: 100%;
+  height: 100%;
 }
 
 :global .example {
