--- a/src/template/templates/Template6/components/Step.scss
+++ b/src/template/templates/Template6/components/Step.scss
@@ -40,7 +40,6 @@
         width: 106px !important;
       }
 
-      .SubTitle,
       .Title {
         margin: 0 20px;
       }
@@ -102,8 +101,7 @@
 }
 
 .Screenshots {
-  box-shadow: 0 64px 24px -32px rgba(0, 0, 0, .6);
+  box-shadow: 0 64px 24px -32px rgba(0, 0, 0, 0.6);
   height: 534px !important;
   width: 301px !important;
 }
-
