--- a/src/template/templates/Template5/style/desktop.scss
+++ b/src/template/templates/Template5/style/desktop.scss
@@ -17,19 +17,19 @@
 
       .Content {
         display: flex;
-        flex: 0 0 400px;
+        flex: 0 0 480px;
         flex-direction: column;
         justify-content: center;
-        max-width: 400px;
+        max-width: 480px;
       }
 
       .Description {
-        max-height: 78px;
+        max-height: 102px;
         margin: 16px 0 0;
 
         &Text {
-          font-size: 12px;
-          line-height: 26px;
+          font-size: 16px;
+          line-height: 34px;
         }
 
         &Wrapper {
@@ -76,12 +76,12 @@
       }
 
       .Title {
-        max-height: 100px;
+        max-height: 92px;
 
         &Text {
-          font-size: 78px;
-          letter-spacing: .1px;
-          line-height: 100px;
+          font-size: 46px;
+          letter-spacing: 0.1px;
+          line-height: 56px;
         }
       }
 
