--- a/src/template/templates/Template6/Template6.scss
+++ b/src/template/templates/Template6/Template6.scss
@@ -1,5 +1,5 @@
-@import './styles/mobile.scss';
-@import './styles/tablet.scss';
+@import "./styles/mobile.scss";
+@import "./styles/tablet.scss";
 
 .Root {
   max-width: 100%;
@@ -31,11 +31,11 @@
 }
 
 .Description {
-  max-height: 72px;
+  max-height: 102px;
 
   &Text {
-    font-size: 12px;
-    line-height: 24px;
+    font-size: 16px;
+    line-height: 34px;
     overflow: hidden;
   }
 }
@@ -48,7 +48,7 @@
   width: 100%;
 
   & > * {
-    max-width: 400px;
+    max-width: 480px;
     text-align: center;
   }
 
@@ -131,12 +131,12 @@
 }
 
 .Title {
-  max-height: 128px;
+  max-height: 112px;
+  overflow: hidden;
 
   &Text {
-    font-size: 40px;
-    letter-spacing: 0.7px;
-    line-height: 64px;
+    font-size: 46px;
+    line-height: 56px;
     overflow: hidden;
   }
 }
