--- a/src/views/Domain/containers/Guide.scss
+++ b/src/views/Domain/containers/Guide.scss
@@ -1,49 +1,40 @@
 .Root {
-  background-image: linear-gradient(to bottom, #5e7adb, #8359c1);
-  border-radius: 10px;
-  padding: 42px 48px 80px;
-  width: 480px;
+  background: rgba(#9b93f2, 0.9);
+  border-radius: 20px;
+  box-shadow: 0 40px 60px rgba(#9b93f2, 0.9);
+  padding: 40px;
+  width: 380px;
   position: relative;
-
-  &:before {
-    background-image: linear-gradient(to bottom, #5e7adb, #8359c1);
-    border-radius: 10px;
-    content: '';
-    display: block;
-    height: 100%;
-    filter: blur(30px);
-    left: 0;
-    opacity: .5;
-    position: absolute;
-    transform: translateY(10%);
-    top: 0;
-    width: 100%;
-    z-index: -1;
-  }
 }
 
 .Description {
-  color: rgba(#fff, .7);
+  color: rgba(#fff, 0.7);
   font-size: 12px;
-  font-weight: 500;
-  letter-spacing: .13px;
+  font-weight: 400;
   line-height: 18px;
 }
 
+.NS {
+  list-style: none;
+  margin: 8px 0 0;
+  padding: 0 0 0 16px;
+}
+
 .Steps {
-  color: rgba(#fff, .7);
+  color: rgba(#fff, 0.7);
   font-size: 12px;
   font-weight: 500;
   margin: 32px 0;
   padding: 0 12px;
 
   & > li:not(:first-child) {
-    margin: 16px 0 0;
+    margin: 20px 0 0;
   }
 }
 
 .Title {
   color: #fff;
   font-size: 20px;
+  font-weight: 400;
   text-align: center;
 }
