--- a/src/components/Form/components/Image/components/Card.scss
+++ b/src/components/Form/components/Image/components/Card.scss
@@ -3,16 +3,16 @@
   border: 0;
   border-radius: 6px;
   height: 135px;
-  opacity: .6;
+  opacity: 0.6;
   overflow: hidden;
   padding: 0;
   position: relative;
-  transition: all .4s;
+  transition: all 0.4s;
   width: 240px;
 
   &:hover,
   &IsSelected {
-    box-shadow: 0 20px 40px -12px rgba(0, 0, 0, .2);
+    box-shadow: 0 20px 40px -12px rgba(0, 0, 0, 0.2);
     cursor: pointer;
     opacity: 1;
     transform: scale(1.07);
@@ -37,12 +37,12 @@
   background: #fff;
   border-radius: 100%;
   bottom: 28px;
-  box-shadow: 0 12px 20px 0 rgba(0, 0, 0, .2);
+  box-shadow: 0 12px 20px 0 rgba(0, 0, 0, 0.2);
   height: 32px;
   left: calc(50% - 16px);
   position: absolute;
   transform: translateY(68px);
-  transition: all .4s;
+  transition: all 0.4s;
   width: 32px;
 
   &:before {
@@ -52,7 +52,7 @@
     height: 100%;
     mask: url('components/Icon/assets/check.svg') no-repeat center center;
     mask-size: 12px 9px;
-    transition: all .2s;
+    transition: all 0.2s;
     width: 100%;
   }
 }
@@ -61,4 +61,18 @@
   max-width: 100%;
   max-width: 100%;
   object-fit: contain;
+}
+
+.Label {
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: 6px;
+  color: #fff;
+  font-size: 10px;
+  font-weight: 600;
+  padding: 4px 6px;
+  position: absolute;
+  right: 16px;
+  text-transform: uppercase;
+  top: 16px;
+  z-index: 2;
 }
