--- a/src/template/templates/Template6/Template6.scss
+++ b/src/template/templates/Template6/Template6.scss
@@ -1,5 +1,5 @@
-@import "./styles/mobile.scss";
-@import "./styles/tablet.scss";
+@import './styles/mobile.scss';
+@import './styles/tablet.scss';
 
 .Root {
   max-width: 100%;
@@ -108,6 +108,10 @@
   justify-content: space-between;
   padding: 100px 100px 0;
   width: 100%;
+
+  .Description {
+    margin: 20px 0 0;
+  }
 }
 
 .Smartphone {
@@ -132,7 +136,6 @@
 
 .Title {
   max-height: 112px;
-  overflow: hidden;
 
   &Text {
     font-size: 46px;
