--- a/src/views/Smartphone/components/Palette.scss
+++ b/src/views/Smartphone/components/Palette.scss
@@ -1,13 +1,14 @@
 .Root {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  grid-row-gap: 24px;
 }
 
 .Cover {
   border: 4px solid #fff;
   border-radius: 100%;
   height: 44px;
-  transition: all 0.2s;
+  transition: all .2s;
   width: 44px;
 }
 
@@ -18,13 +19,13 @@
 
   &:hover {
     .Cover {
-      box-shadow: 0 4px 8px rgba(#000, 0.1);
+      box-shadow: 0 4px 8px rgba(#000, .1);
     }
   }
 }
 
 .Title {
-  color: rgba(#000, 0.2);
+  color: rgba(#000, .2);
   font-size: 10px;
   font-weight: 700;
   margin: 8px 0 0;
