--- a/src/template/components/Smartphone.scss
+++ b/src/template/components/Smartphone.scss
@@ -20,11 +20,10 @@
   z-index: 2;
 }
 
-.Mockup {
-  background: no-repeat center center;
-  background-size: contain;
-  height: 100%;
-  position: relative;
-  width: 100%;
-  z-index: 2;
+.Screenshots {
+  height: calc(100% - 60px);
+  left: 30px;
+  position: absolute;
+  top: 30px;
+  width: calc(100% - 60px);
 }
